<resources>
    <string name="app_name">Split the Bill</string>
    <string name="action_settings">Settings</string>
    <string name="titleText">Split The Bill</string>
    <string name="mainButtonText">Split My Bill!</string>
    <string name="title_activity_calculate_bill">CalculateBill</string>
    <string name="billAmountHintText">Enter Total Bill Amount</string>
    <string name="numberInPartyText">Enter Number In Party</string>
    <string name="calculateButtonText">Calculate</string>
    <string name="promptText">Quality of Service</string>
    <string name="qualityTitleText">Quality of Service</string>
    <string name="tipAmountTitleText">Tip Amount:</string>
    <string name="eachAmountTitle">Each Person Pays:</string>
    <string name="intNumberInPartyException">You must enter a whole number for the number of party members.</string>
    <string-array name="quality_array">
        <item>"Excellent"</item>
        <item>"Good"</item>
        <item>"Poor"</item>
    </string-array>
</resources>
