<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.supercynical.splitthebill.CalculateBill"
    tools:showIn="@layout/activity_calculate_bill"
    android:background="#4bcaf4">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleText"
        android:id="@+id/titleText"
        android:textSize="48sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/totalBillText"
        android:hint="@string/billAmountHintText"
        android:background="#ffffff"
        android:layout_below="@+id/titleText"
        android:layout_alignLeft="@+id/numberInPartyText"
        android:layout_alignStart="@+id/numberInPartyText"
        android:layout_marginTop="19dp"
        android:gravity="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/numberInPartyText"
        android:hint="@string/numberInPartyText"
        android:background="#ffffff"
        android:layout_below="@+id/totalBillText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculateButtonText"
        android:id="@+id/calculateButton"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/spinner"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/spinner"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:prompt="@string/promptText"
        android:entries="@array/quality_array"
        android:spinnerMode="dialog"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tipAmountTitleText"
        android:id="@+id/tipAmountTitle"
        android:layout_below="@+id/calculateButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/eachAmountTitle"
        android:id="@+id/eachAmountTitle"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/tipAmountTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tipAmount"
        android:layout_alignTop="@+id/tipAmountTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/paymentAmount"
        android:layout_alignTop="@+id/eachAmountTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/qualityTitleText"
        android:id="@+id/qualityTitleText"
        android:layout_above="@+id/paymentAmount"
        android:layout_marginBottom="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/qualityText"
        android:layout_alignTop="@+id/qualityTitleText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
